<resources>
    <string name="app_name">PayZen ePOS Demo</string>
    <string name="test">TEST</string>
    <string name="powered_by_lyra">Powered by Lyra</string>
    <string name="pay_with_payzen">Pay with PayZen</string>
    <string name="generate_link">Create Payment Link</string>
    <string name="loading">Chargement</string>
    <string name="amount">Amount </string>
    <string name="email">Email</string>
    <string name="email_confirmation">An email confirmation have been sent to %1$s</string>
    <string name="error_occured">An error occurs : %1$s</string>
    <string name="payment_success">Payment successful</string>
    <string name="payment_error">Payment failed</string>
    <string name="payment_share_link">Share Payment Link</string>
    <string name="invalid_input">Invalid input</string>
    <string name="invalid_order">Invalid Order</string>
    <string name="invalid_amount">Amount must be lower than 5000 </string>
    <string name="error_appears">Error appears</string>
    <string name="production">PRODUCTION</string>
    <string name="back_to_home">Back to home</string>
    <string name="qr_code_image">qrcode image</string>
    <string name="payzen_logo">payzen logo</string>
    <string name="check_status">check status</string>
    <string name="orderID">Order ID </string>
    <string name="login">login</string>
    <string name="invalid_shop_id">invalid shop ID</string>
    <string name="invalid_certificate">invalid certificate</string>
    <string name="first_time_here">First time here?</string>
    <string name="enter_credentials">Please enter your credentials:</string>
    <string name="enter_amount_order">Enter amount and orderID</string>
    <string name="payment_generated1">SCAN it from anywhere!</string>
    <string name="payment_generated2">SHARE it everywhere! </string>
    <string name="scan_or_share">SCAN or SHARE</string>
    <string name="scan_or_share_me">Click to Share link:</string>




    <string name="language">Your language</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="finddetails">Please find details here</string>

    <string-array name="payment_type_mode">
        <item>ALL</item>
        <item>CB</item>
        <item>VISA</item>
        <item>MASTERCARD</item>
    </string-array>
    <string name="all">All</string>
    <string name="areyousureexit">Are you sure you want to exit?</string>
    <string name="areyousurecancel">Are you sure you want to cancel the order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="refused_payment">Refused payment</string>
    <string name="abandonned_payment">Abandoned payment</string>
    <string name="expired_payment">Expired payment</string>
    <string name="network_error_payment">Unavailable operation due to connectivity failure</string>
    <string name="status_image_desc">payment status image</string>
    <string name="header_image">header image</string>
    <string name="lang_button">lang button</string>
    <string name="amount_image">amount image</string>
    <string name="orderid_image">order ID image</string>

</resources>
