<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:background="@color/bluelyradark2"
    android:fillViewport="false">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/screen"
        android:gravity="center_horizontal"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context="com.lyranetwork.demo.epos.Activity.MainActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/payzen_logo"
                app:srcCompat="@drawable/header" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="2dp">

                <TextView
                    android:id="@+id/orderIDTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/orderID"
                    android:textColor="@color/bluelyramorewhite" />

                <TextView
                    android:id="@+id/amountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/amount"
                    android:textColor="@color/bluelyramorewhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/orderIDTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/orderID"
                    android:textColor="@color/bluelyramorewhite" />

                <TextView
                    android:id="@+id/amountTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/amount"
                    android:textColor="@color/bluelyramorewhite" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="354dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="0dp"
            tools:layout_editor_absoluteY="239dp">

            <TextView
                android:id="@+id/titleQRTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center_horizontal"
                android:text="@string/scan_or_share_me"
                android:textColor="@color/white"
                android:visibility="visible" />

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/layoutQRCode"
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/imageViewQRCode"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@color/white"
                        android:contentDescription="@string/qr_code_image"
                        android:padding="0dp"
                        android:visibility="visible"
                        app:srcCompat="@color/white" />

                    <ImageView
                        android:id="@+id/satusImageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal|center"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/status_image_desc"
                        android:paddingBottom="10dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/refused_big" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/loadingPanelPaymentReceived"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="0dp"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progressBarPaymentReceived"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true" />
                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewPoweredByLinkReceived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/powered_by_lyra"
            android:textColor="@android:color/background_light" />


    </LinearLayout>


</ScrollView>