<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen"
        android:orientation="vertical"
        tools:context="com.lyranetwork.demo.epos.Activity.MainActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/header"
                android:contentDescription="@string/header_image" />

            <ImageButton
                android:id="@+id/imageButtonLang"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:background="@drawable/unitedkingdom"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/unitedkingdom"
                android:contentDescription="@string/lang_button" />
        </FrameLayout>

        <TextView
            android:id="@+id/titleGenerateLinkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_amount_order"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="239dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/inr"
                    android:contentDescription="@string/amount_image" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/editTextAmount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/bluelyra"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/bluelyradark2"
                        android:textCursorDrawable="@null"
                        android:visibility="visible"
                        tools:hint="amount"
                        tools:ignore="LabelFor" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/order_id"
                    android:contentDescription="@string/orderid_image" />

                <EditText
                    android:id="@+id/editTextOrderID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/bluelyra"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/bluelyradark2"
                    android:textCursorDrawable="@null"
                    android:visibility="visible"
                    tools:hint="Your Order ID" />

            </LinearLayout>

            <Button
                android:id="@+id/paybutton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@android:color/background_light"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/generate_link"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/bluelyradark2"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/switchLayout"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewPoweredBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center"
            android:text="@string/powered_by_lyra"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55FFFFFF"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</FrameLayout>